# pedrestrian_detector

./: .gitignore  README.md  hog_svm_final.pkl  hog_svm_weights.npy  train.ipynb  yolo.py
bot_telegram/: config.py  main.py  pose_detector.py  requirements.txt  server.py  subscribers.json  trigger_pose.py  video_processor.py
dataset/no_pedestrians/: 120.avif  122.avif  126.avif  131.avif  141.avif  142.avif  152.avif  161.avif
detector_cpp/: CMakeLists.txt  config.hpp  main.cpp
detector_cpp/models/: svm_weights.txt  svm_weights1.txt
detector_cpp/utils/: telegram_sender.cpp  telegram_sender.hpp
docs/: ARQUITECTURA.md  GUIA_INFORME.md  TELEGRAM_SETUP.md
